# NPUcore-Aspera

./: .gitignore  1.txt  Makefile  README.md
os/: Cargo.toml  Makefile  buildfs.sh  run_script
os/.cargo/: config.toml
os/make/: la64.mk  riscv.mk
os/src/: console.rs  lang_items.rs  load_img-rv.S  load_img.S  main.rs  preload_app-rv.S  timer.rs
os/src/arch/la64/: config.rs  entry.asm  syscall_id.rs
os/src/arch/la64/ls_nand/: mmio_macro.rs  mod.rs
os/src/arch/la64/register/: mod.rs
os/src/arch/la64/trap/: mem_access.rs  mod.rs
os/src/drivers/block/: block_dev.rs  mem_blk.rs  mod.rs  sata_blk.rs  virtio_blk.rs
os/src/fs/: cache.rs  directory_tree.rs  dirent.rs  file_descriptor.rs  file_trait.rs  filesystem.rs  inode.rs  layout.rs  mod.rs  poll.rs  swap.rs  timestamp.rs  vfs.rs
os/src/fs/dev/: hwclock.rs  null.rs  pipe.rs  socket.rs  tty.rs  urandom.rs  zero.rs
os/src/fs/ext4/: balloc.rs  bitmap.rs  block_group.rs  crc.rs  direntry.rs  efs.rs  error.rs  ext4_inode.rs  ext4fs.rs  extent.rs  file.rs  ialloc.rs  layout.rs  mod.rs  path.rs  superblock.rs  test.rs
os/src/fs/fat32/: bitmap.rs  dir_iter.rs  efs.rs  fat_inode.rs  fat_osinode.rs  file.rs  layout.rs  mod.rs  vfs.rs
os/src/hal/: mod.rs
os/src/hal/arch/: mod.rs
os/src/hal/arch/loongarch64/: acpi.rs  kern_stack.rs  mod.rs  sbi.rs
os/src/hal/arch/riscv/: config.rs  kern_stack.rs  mod.rs  rv_pagetable.rs  sbi.rs  sv39.rs  time.rs  tlb.rs
os/src/hal/configs/: loongarch64-qemu-virt.toml  riscv64-qemu-virt.toml
os/src/math/: mod.rs
os/src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  map_area.rs  memory_set.rs  memory_set_rv.rs  mod.rs  page_table.rs  zram.rs
os/src/net/: address.rs  config.rs  mod.rs  tcp.rs
os/src/syscall/: fs.rs  mod.rs  process.rs
os/src/task/: context.rs  elf.rs  manager.rs  mod.rs  pid.rs  processor.rs  signal.rs  task.rs  threads.rs
(+30 files in other folders)
