[package]
name = "os"
version = "0.1.0"
# authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2018"

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.8"
spin = "0.7"
bitflags = "1.3"
xmas-elf = "0.7.0"
embedded-hal = "=1.0.0-alpha.7"
nb = "1.0"
log = "0.4"
num_enum = { version="0.5", default-features = false }
downcast-rs = { version="1.2.0", default-features = false }
lz4_flex = { version="0.9.0", default-features = false }
bit_field = "0.10.1"
[target.'cfg(target_arch = "loongarch64")'.dependencies]
rlibc = "1.0.0"
volatile = "0.3.0"
rand_core = "0.6.4"
managed = { version = "0.8", default-features = false, features = ["map"] }
pci = { git = "https://github.com/huayuntao/dep_pci.git" }
isomorphic_drivers = { git = "https://github.com/huayuntao/dep_iso.git" }

smoltcp = { version = "0.10.0", default-features = false, features = [
    "alloc",
    "log",
    "medium-ethernet",
    "medium-ip",
    "proto-ipv4",
    "proto-ipv6",
    "proto-dhcpv4",
    "proto-ipv4-fragmentation",
    "socket-udp",
    "socket-tcp",
    "socket-dhcpv4",
    "async",
] }

[features]
zero_init = []
swap = []
zram = []
oom_handler = ["swap", "zram"]
log_off = ["log/max_level_off"]
block_sata = []
block_mem = []
comp = []

# LoongArch Boards:
la64 = []
board_2k1000 = ["oom_handler", "la64"]
board_laqemu = ["oom_handler", "la64"]
# END of LoongArch Boards.

default = ["board_laqemu", "block_sata"]

[profile.dev]
# 优化级别
opt-level = "s"
# debug = true
# 生成详细调试信息
debug = 2
# 禁用调试断言
debug-assertions = false
# 整数溢出检查
overflow-checks = false
# 禁用链接时优化
lto = false
# panic时进行栈展开
panic = 'unwind'
# 禁用增量编译
incremental = false
# 使用16个代码生成单元
codegen-units = 16
# 禁用运行时库搜索路径
rpath = false
[profile.release]
lto = true
